# technical-event-coordinator-final

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  __init__.py  baseline_agent.py  benchmark.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  grader.py  tasks.py
server/: __init__.py  app.py  landing_ui.py  requirements.txt
tests/: conftest.py  test_environment.py  test_graders.py  test_scenarios.py  test_server.py
